@@ -21,7 +21,6 @@ import com.github.tomakehurst.wiremock.admin.AdminRoutes;
 import com.github.tomakehurst.wiremock.admin.LimitAndOffsetPaginator;
 import com.github.tomakehurst.wiremock.admin.model.*;
 import com.github.tomakehurst.wiremock.common.BrowserProxySettings;
-import com.github.tomakehurst.wiremock.common.FileSource;
 import com.github.tomakehurst.wiremock.common.xml.Xml;
 import com.github.tomakehurst.wiremock.extension.*;
 import com.github.tomakehurst.wiremock.extension.requestfilter.RequestFilter;
@@ -44,9 +43,10 @@ import com.github.tomakehurst.wiremock.message.MessageStubRequestHandler;
 import com.github.tomakehurst.wiremock.message.RequestInitiatedMessageChannel;
 import com.github.tomakehurst.wiremock.recording.*;
 import com.github.tomakehurst.wiremock.standalone.MappingsLoader;
-import com.github.tomakehurst.wiremock.store.DefaultStores;
+import com.github.tomakehurst.wiremock.store.BlobStore;
 import com.github.tomakehurst.wiremock.store.SettingsStore;
 import com.github.tomakehurst.wiremock.store.Stores;
+import com.github.tomakehurst.wiremock.store.StubMappingStore;
 import com.github.tomakehurst.wiremock.stubbing.*;
 import com.github.tomakehurst.wiremock.verification.*;
 import com.jayway.jsonpath.JsonPathException;
@@ -55,9 +55,11 @@ import com.jayway.jsonpath.spi.cache.NOOPCache;
 import java.time.Duration;
 import java.util.*;
 import java.util.concurrent.atomic.AtomicBoolean;
+import java.util.function.Function;
 import java.util.stream.Collectors;
 import org.wiremock.url.Segment;
 
+@SuppressWarnings("deprecation")
 public class WireMockApp implements StubServer, Admin {
 
   public static final String FILES_ROOT = "__files";
@@ -70,13 +72,13 @@ public class WireMockApp implements StubServer, Admin {
   private final Stores stores;
   private final Scenarios scenarios;
   private final StubMappings stubMappings;
+  private final StubMappings nonPersistingStubMappings;
   private final RequestJournal requestJournal;
   private final MessageJournal messageJournal;
   private final SettingsStore settingsStore;
   private final boolean browserProxyingEnabled;
   private final MappingsLoader defaultMappingsLoader;
   private final Container container;
-  private final MappingsSaver mappingsSaver;
   private final NearMissCalculator nearMissCalculator;
   private final Recorder recorder;
   private final List<GlobalSettingsListener> globalSettingsListeners;
@@ -85,13 +87,12 @@ public class WireMockApp implements StubServer, Admin {
   private final MessageChannels messageChannels;
   private final MessageStubMappings messageStubMappings;
 
-  private Options options;
+  private final Options options;
 
-  private Extensions extensions;
+  private final Extensions extensions;
 
   public WireMockApp(Options options, Container container) {
-    if (!options.getDisableOptimizeXmlFactoriesLoading()
-        && Boolean.FALSE.equals(FACTORIES_LOADING_OPTIMIZED.get())) {
+    if (!options.getDisableOptimizeXmlFactoriesLoading() && !FACTORIES_LOADING_OPTIMIZED.get()) {
       Xml.optimizeFactoriesLoading();
       FACTORIES_LOADING_OPTIMIZED.set(true);
     }
@@ -111,7 +112,6 @@ public class WireMockApp implements StubServer, Admin {
 
     this.browserProxyingEnabled = options.browserProxySettings().enabled();
     this.defaultMappingsLoader = options.mappingsLoader();
-    this.mappingsSaver = options.mappingsSaver();
 
     this.settingsStore = stores.getSettingsStore();
 
@@ -157,17 +157,31 @@ public class WireMockApp implements StubServer, Admin {
     combinedListeners.put(httpStubListener.getName(), httpStubListener);
     serveEventListeners = Collections.unmodifiableMap(combinedListeners);
 
+    Map<String, ResponseDefinitionTransformer> transformers =
+        extensions.ofType(ResponseDefinitionTransformer.class);
+    Map<String, ResponseDefinitionTransformerV2> v2transformers =
+        extensions.ofType(ResponseDefinitionTransformerV2.class);
+    List<StubLifecycleListener> stubLifecycleListeners =
+        List.copyOf(extensions.ofType(StubLifecycleListener.class).values());
+    BlobStore filesBlobStore = stores.getFilesBlobStore();
+    StubMappingStore stubStore = stores.getStubStore();
+
     scenarios = new InMemoryScenarios(stores.getScenariosStore());
-    stubMappings =
-        new StoreBackedStubMappings(
-            stores.getStubStore(),
-            scenarios,
-            customMatchers,
-            extensions.ofType(ResponseDefinitionTransformer.class),
-            extensions.ofType(ResponseDefinitionTransformerV2.class),
-            stores.getFilesBlobStore(),
-            List.copyOf(extensions.ofType(StubLifecycleListener.class).values()),
-            serveEventListeners);
+    Function<MappingsSaver, StubMappings> buildStubMappings =
+        mappingsSaver ->
+            new StoreBackedStubMappings(
+                stubStore,
+                scenarios,
+                customMatchers,
+                transformers,
+                v2transformers,
+                filesBlobStore,
+                stubLifecycleListeners,
+                serveEventListeners,
+                mappingsSaver);
+
+    nonPersistingStubMappings = buildStubMappings.apply(MappingsSaver.NOOP);
+    stubMappings = buildStubMappings.apply(options.mappingsSaver());
     nearMissCalculator =
         new NearMissCalculator(stubMappings, requestJournal, scenarios, customMatchers);
     recorder =
@@ -177,69 +191,6 @@ public class WireMockApp implements StubServer, Admin {
 
     this.container = container;
     extensions.startAll();
-    loadDefaultMappings();
-  }
-
-  public WireMockApp(
-      boolean browserProxyingEnabled,
-      MappingsLoader defaultMappingsLoader,
-      Map<String, MappingsLoaderExtension> mappingsLoaderExtensions,
-      MappingsSaver mappingsSaver,
-      boolean requestJournalDisabled,
-      Integer maxRequestJournalEntries,
-      Map<String, ResponseDefinitionTransformer> transformers,
-      Map<String, ResponseDefinitionTransformerV2> v2transformers,
-      Map<String, RequestMatcherExtension> requestMatchers,
-      FileSource rootFileSource,
-      Container container) {
-
-    this.stores = new DefaultStores(rootFileSource);
-
-    this.browserProxyingEnabled = browserProxyingEnabled;
-    this.defaultMappingsLoader = defaultMappingsLoader;
-    this.mappingsLoaderExtensions = mappingsLoaderExtensions;
-    this.mappingsSaver = mappingsSaver;
-    this.settingsStore = stores.getSettingsStore();
-    requestJournal =
-        requestJournalDisabled
-            ? new DisabledRequestJournal()
-            : new StoreBackedRequestJournal(
-                maxRequestJournalEntries, requestMatchers, stores.getRequestJournalStore());
-    messageJournal =
-        requestJournalDisabled
-            ? new DisabledMessageJournal()
-            : new StoreBackedMessageJournal(
-                maxRequestJournalEntries, stores.getMessageJournalStore());
-    scenarios = new InMemoryScenarios(stores.getScenariosStore());
-
-    this.messageChannels = new MessageChannels(stores.getMessageChannelStore());
-    this.messageStubMappings = new MessageStubMappings(stores.getMessageStubMappingStore());
-
-    HttpStubServeEventListener httpStubListener =
-        new HttpStubServeEventListener(
-            messageStubMappings,
-            messageChannels,
-            stores,
-            requestMatchers,
-            List.copyOf(extensions.ofType(MessageActionTransformer.class).values()));
-    serveEventListeners = Map.of(httpStubListener.getName(), httpStubListener);
-
-    stubMappings =
-        new StoreBackedStubMappings(
-            stores.getStubStore(),
-            scenarios,
-            requestMatchers,
-            transformers,
-            v2transformers,
-            stores.getFilesBlobStore(),
-            Collections.emptyList(),
-            serveEventListeners);
-    this.container = container;
-    nearMissCalculator =
-        new NearMissCalculator(stubMappings, requestJournal, scenarios, requestMatchers);
-    recorder =
-        new Recorder(this, extensions, stores.getFilesBlobStore(), stores.getRecorderStateStore());
-    globalSettingsListeners = Collections.emptyList();
     loadDefaultMappings();
   }
 
@@ -341,13 +292,13 @@ public class WireMockApp implements StubServer, Admin {
     loadMappingsUsing(defaultMappingsLoader);
     loadMessageMappingsUsing(defaultMappingsLoader);
     if (mappingsLoaderExtensions != null) {
-      mappingsLoaderExtensions.values().forEach(e -> loadMappingsUsing(e));
-      mappingsLoaderExtensions.values().forEach(e -> loadMessageMappingsUsing(e));
+      mappingsLoaderExtensions.values().forEach(this::loadMappingsUsing);
+      mappingsLoaderExtensions.values().forEach(this::loadMessageMappingsUsing);
     }
   }
 
   public void loadMappingsUsing(final MappingsLoader mappingsLoader) {
-    mappingsLoader.loadMappingsInto(stubMappings);
+    mappingsLoader.loadMappingsInto(nonPersistingStubMappings);
   }
 
   public void loadMessageMappingsUsing(final MappingsLoader mappingsLoader) {
@@ -375,10 +326,7 @@ public class WireMockApp implements StubServer, Admin {
       stubMapping = stubMapping.transform(b -> b.setId(UUID.randomUUID()));
     }
 
-    stubMapping = stubMappings.addMapping(stubMapping);
-    if (stubMapping.shouldBePersisted()) {
-      mappingsSaver.save(stubMapping);
-    }
+    stubMappings.addMapping(stubMapping);
   }
 
   @Override
@@ -387,10 +335,6 @@ public class WireMockApp implements StubServer, Admin {
     if (matchedStub == null) return;
 
     stubMappings.removeMapping(matchedStub);
-
-    if (matchedStub.shouldBePersisted()) {
-      mappingsSaver.remove(matchedStub.getId());
-    }
   }
 
   /**
@@ -417,10 +361,7 @@ public class WireMockApp implements StubServer, Admin {
 
   @Override
   public void editStubMapping(StubMapping stubMapping) {
-    stubMapping = stubMappings.editMapping(stubMapping);
-    if (stubMapping.shouldBePersisted()) {
-      mappingsSaver.save(stubMapping);
-    }
+    stubMappings.editMapping(stubMapping);
   }
 
   @Override
@@ -438,7 +379,6 @@ public class WireMockApp implements StubServer, Admin {
     for (StubMapping stubMapping : stubMappings.getAll()) {
       stubMappings.editMapping(stubMapping.transform(b -> b.setPersistent(true)));
     }
-    mappingsSaver.save(stubMappings.getAll());
   }
 
   @Override
@@ -465,8 +405,7 @@ public class WireMockApp implements StubServer, Admin {
 
   @Override
   public void resetMappings() {
-    mappingsSaver.removeAll();
-    stubMappings.reset();
+    stubMappings.resetMappings();
   }
 
   @Override
@@ -544,9 +483,7 @@ public class WireMockApp implements StubServer, Admin {
   public FindNearMissesResult findNearMissesForUnmatchedRequests() {
     List<NearMiss> nearMisses = new ArrayList<>();
     List<ServeEvent> unmatchedServeEvents =
-        requestJournal.getAllServeEvents().stream()
-            .filter(ServeEvent::isNoExactMatch)
-            .collect(Collectors.toList());
+        requestJournal.getAllServeEvents().stream().filter(ServeEvent::isNoExactMatch).toList();
 
     for (ServeEvent serveEvent : unmatchedServeEvents) {
       nearMisses.addAll(nearMissCalculator.findNearestTo(serveEvent.getRequest()));
@@ -717,15 +654,8 @@ public class WireMockApp implements StubServer, Admin {
         }
       }
       stubMappings.updateMappings(mappingsToInsert, mappingsToRemove);
-      mappingsSaver.setAll(
-          listAllStubMappings().getMappings().stream()
-              .filter(StubMapping::shouldBePersisted)
-              .toList());
     } else {
-      List<StubMapping> insertedStubs = stubMappings.updateMappings(mappingsToInsert, List.of());
-      List<StubMapping> mappingsToSave =
-          insertedStubs.stream().filter(StubMapping::shouldBePersisted).toList();
-      if (!mappingsToSave.isEmpty()) mappingsSaver.save(mappingsToSave);
+      stubMappings.updateMappings(mappingsToInsert, List.of());
     }
   }
 
@@ -741,11 +671,6 @@ public class WireMockApp implements StubServer, Admin {
             .toList();
     if (!toRemove.isEmpty()) {
       this.stubMappings.updateMappings(List.of(), toRemove);
-      List<UUID> mappingsToDelete = new ArrayList<>();
-      for (StubMapping removed : toRemove) {
-        if (removed.shouldBePersisted()) mappingsToDelete.add(removed.getId());
-      }
-      if (!mappingsToDelete.isEmpty()) mappingsSaver.remove(mappingsToDelete);
     }
   }
 
